[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/enemies/TargetingMissile.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/crosshair.png" type="Texture" id=2]
[ext_resource path="res://assets/particles/portal_particle.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 121.096

[sub_resource type="Animation" id=2]
resource_name = "Pulse"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Crosshair:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.647059, 0.647059, 0.647059, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Crosshair:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
angular_velocity = 150.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="TargetingMissile" type="Node2D"]
position = Vector2( 234.83, 175.621 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Crosshair" type="Sprite" parent="."]
scale = Vector2( 12, 12 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Pulse = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="ExplosionParticle" type="Particles2D" parent="."]
scale = Vector2( 5, 5 )
emitting = false
amount = 30
lifetime = 0.45
one_shot = true
explosiveness = 0.2
process_material = SubResource( 4 )
texture = ExtResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
